--- a/ruby/classwork/blog/app/views/pages/_header.html.erb
+++ b/ruby/classwork/blog/app/views/pages/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
   <div class="container-fluid">
      <%= link_to "Home", root_path, class: "navbar-brand #{'active' if current_page?(root_path)}"%>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
