--- a/ruby/classwork/blog/app/views/pages/home.html.erb
+++ b/ruby/classwork/blog/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
   
   <img src="https://images.pexels.com/photos/2739666/pexels-photo-2739666.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="img-fluid d-block mx-auto">
 
-  <div class="map-container">
+  <div id="map-container">
   <div id="map"></div>
 </div>
 
