--- a/ruby/classwork/blog/app/views/pages/home.html.erb
+++ b/ruby/classwork/blog/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <% content_for :javascript do %>
   <script type="module">
-    import "map";
+    import "nps_landmarks";
   </script>
   <% end %>
   
